Add aip.deletion_report_key to API & persistence
