# internal/api/gen/http/openapi3.json
@@ -5,6 +5,7 @@
         "example": [
           {
             "created_at": "1970-01-01T00:00:01Z",
+            "deletion_report_key": "abc123",
             "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
             "name": "abc123",
             "object_key": "abc123",
@@ -21,6 +22,7 @@
         "example": {
           "item": {
             "created_at": "1970-01-01T00:00:01Z",
+            "deletion_report_key": "abc123",
             "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
             "name": "abc123",
             "object_key": "abc123",
@@ -96,6 +98,7 @@
         "description": "An AIP describes an AIP retrieved by the storage service. (default view)",
         "example": {
           "created_at": "1970-01-01T00:00:01Z",
+          "deletion_report_key": "abc123",
           "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
           "name": "abc123",
           "object_key": "abc123",
@@ -107,6 +110,11 @@
             "description": "Creation datetime",
             "example": "1970-01-01T00:00:01Z",
             "format": "date-time",
+            "type": "string"
+          },
+          "deletion_report_key": {
+            "description": "Deletion report key",
+            "example": "abc123",
             "type": "string"
           },
           "location_uuid": {
@@ -155,6 +163,7 @@
         "example": [
           {
             "created_at": "1970-01-01T00:00:01Z",
+            "deletion_report_key": "abc123",
             "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
             "name": "abc123",
             "object_key": "abc123",
@@ -1501,6 +1510,7 @@
         "description": "An AIP describes an AIP retrieved by the storage service.",
         "example": {
           "created_at": "1970-01-01T00:00:01Z",
+          "deletion_report_key": "abc123",
           "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
           "name": "abc123",
           "object_key": "abc123",
@@ -1512,6 +1522,11 @@
             "description": "Creation datetime",
             "example": "1970-01-01T00:00:01Z",
             "format": "date-time",
+            "type": "string"
+          },
+          "deletion_report_key": {
+            "description": "Deletion report key",
+            "example": "abc123",
             "type": "string"
           },
           "location_uuid": {
@@ -1735,6 +1750,7 @@
           "items": [
             {
               "created_at": "1970-01-01T00:00:01Z",
+              "deletion_report_key": "abc123",
               "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
               "name": "abc123",
               "object_key": "abc123",
@@ -4968,6 +4984,7 @@
                   "items": [
                     {
                       "created_at": "1970-01-01T00:00:01Z",
+                      "deletion_report_key": "abc123",
                       "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
                       "name": "abc123",
                       "object_key": "abc123",
@@ -5071,6 +5088,7 @@
               "application/json": {
                 "example": {
                   "created_at": "1970-01-01T00:00:01Z",
+                  "deletion_report_key": "abc123",
                   "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
                   "name": "abc123",
                   "object_key": "abc123",
@@ -5157,6 +5175,7 @@
               "application/json": {
                 "example": {
                   "created_at": "1970-01-01T00:00:01Z",
+                  "deletion_report_key": "abc123",
                   "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
                   "name": "abc123",
                   "object_key": "abc123",
@@ -6831,6 +6850,7 @@
                 "example": [
                   {
                     "created_at": "1970-01-01T00:00:01Z",
+                    "deletion_report_key": "abc123",
                     "location_uuid": "d1845cb6-a5ea-474a-9ab8-26f9bcd919f5",
                     "name": "abc123",
                     "object_key": "abc123",
